# git-remote-walrus

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  demo.sh  plan.md
docs/: sui-architecture.md
move/walrus_remote/: Move.toml
move/walrus_remote/sources/: remote_state.move
scripts/: build-move.sh  create-remote.sh  publish-move.sh
src/: commands.rs  config.rs  error.rs  git.rs  main.rs  protocol.rs  storage.rs  sui.rs  walrus.rs
src/commands/: capabilities.rs  export.rs  fetch.rs  import.rs  list.rs  mod.rs  push.rs
src/git/: fast_export.rs  fast_import.rs
src/pack/: mod.rs  objects.rs  receive.rs  send.rs
src/storage/: cache_index.rs  content_id.rs  filesystem.rs  mod.rs  state.rs  traits.rs  walrus.rs
src/sui/: client.rs
src/walrus/: client.rs  network_info.rs  tracker.rs
tests/: integration_test.rs
