[package]
name = "git-remote-gitwal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-remote-gitwal"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
flate2 = "1.1.2"
sha1 = "0.10.6"
gix-object = "0.50.2"
tempfile = "3.23.0"

[dev-dependencies]
tempfile = "3.23.0"
