[package]
name = "git-remote-walrus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-remote-walrus"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
flate2 = "1.1.2"
sha1 = "0.10.6"
gix-object = "0.50.2"
tempfile = "3.23.0"
serde_json = "1.0.145"
dirs = "6.0.0"
# Sui SDK
sui-sdk = { git = "https://github.com/MystenLabs/sui", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui", package = "sui-types" }
sui-keys = { git = "https://github.com/MystenLabs/sui", package = "sui-keys" }
sui-config = { git = "https://github.com/MystenLabs/sui", package = "sui-config" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", package = "shared-crypto" }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
clap = { version = "4.5.48", features = ["derive"] }
base64 = "0.22.1"
num-bigint = "0.4.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
indicatif = "0.18.0"

[dev-dependencies]
tempfile = "3.23.0"
